# omi-to-obsidian

./: .gitignore  PRD.md  README.md  omi_context.md  pyproject.toml
docs/plans/: 2026-01-10-omi-obsidian-sync.md
fixtures/: conversations_page1.json  conversations_page2.json  edge_cases.json  overrides_notable.json
src/omi_sync/: api_client.py  cli.py  config.py  file_writer.py  finalization.py  frontmatter_writer.py  models.py  notable.py  people.py  rebuild.py  slugify.py  state.py  sync_engine.py  timezone_utils.py
src/omi_sync/generators/: __init__.py  event.py  highlights.py  raw.py
tests/: conftest.py  test_api_client.py  test_cli.py  test_config.py  test_finalization.py  test_frontmatter.py  test_generators_event.py  test_generators_highlights.py  test_generators_raw.py  test_models.py  test_notable.py  test_people.py  test_rebuild.py  test_slugify.py  test_state.py  test_sync_engine.py  test_timezone.py
